@startuml
!include globals/stylesheets.iuml


interface GameService {
    +selectProposition(roundId:String,  playerId:String,  propositionId:String)
}

interface EntityService {
    +editRound(roundId: String, editor: Consumer)
}

interface EvaluationService {
    +evaluateSelection(round: Round, propositionId: String, selectorId: String): Evaluation
}

class Game {
    -rounds: List<Round>
    +getState()
    +getCurrentRound()
    +updateResults(result: Result)
}

class Round {
    +getState()
}

interface GameRepository{
 +findById(id:String)
 +save(game:Game)
}

class GameController {
    +evalRound(game: Game, playerId: String, propositionId: String): Evaluation
}


GameController "1"-->"1" GameService
GameService "1"-->"1" EntityService
Round "1"-->"1" EvaluationService
GameService "1"..>"*" Game
EntityService "1"-->"1" GameRepository
Game "1"-->"*" Round


@enduml